test_resources/lit_class/errors/test9.sem
frame :[pre] test9::A::self (mut self : mut &(mut test9::A))-> void {
    <unit-value>
}
frame :[post] test9::A::self (mut self : mut &(mut test9::A))-> void {
    <unit-value>
}
frame : test9::A::self (mut self : mut &(mut test9::A))-> void {
    test9::A::self[pre](self);
    test9::A::self[post](self)
}
frame : test9::B::foo (self : &(test9::B))-> void {
    <unit-value>
}
frame :[pre] test9::B::self (mut self : mut &(mut test9::B))-> void {
    test9::A::self[pre](self);
    {
        <unit-value>
    }
}
frame :[post] test9::B::self (mut self : mut &(mut test9::B))-> void {
    test9::A::self[post](self);
    {
        <unit-value>
    }
}
frame : test9::B::self (mut self : mut &(mut test9::B))-> void {
    test9::B::self[pre](self);
    test9::B::self[post](self)
}
frame :[pre] test9::Error::self (mut self : mut &(mut test9::Error))-> void {
    core::exception::Exception::self[pre](self);
    {
        <unit-value>
    }
}
frame :[post] test9::Error::self (mut self : mut &(mut test9::Error))-> void {
    core::exception::Exception::self[post](self);
    {
        <unit-value>
    }
}
frame : test9::Error::self (mut self : mut &(mut test9::Error))-> void {
    test9::Error::self[pre](self);
    test9::Error::self[post](self)
}
